src/test/ui/impl-trait/region-escape-via-bound.stderr
error[E0700]: hidden type for `impl Trait` captures lifetime that does not appear in bounds
  --> $DIR/region-escape-via-bound.rs:15:29
   |
LL | fn foo(x: Cell<&'x u32>) -> impl Trait<'y>
   |                             ^^^^^^^^^^^^^^
LL |
LL | where 'x: 'y
   |       -- hidden type `Cell<&'x u32>` captures the lifetime `'x` as defined here

error: aborting due to previous error

For more information about this error, try `rustc --explain E0700`.
